add prepear for sql, update doker and .sh, add comments, fix method TasksTimeSpent
