# docs/swagger.json
@@ -608,7 +608,7 @@
             }
         },
         "/time/spent": {
-            "get": {
+            "post": {
                 "description": "Get time spent on tasks by a person within a specific time range. FORMAT TIME - RFC 3339 \"2024-08-01T08:00:00Z\".",
                 "consumes": [
                     "application/json"
@@ -619,28 +619,16 @@
                 "tags": [
                     "Time"
                 ],
-                "summary": "Get Task Time Spent",
+                "summary": "Task Time Spent",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "People ID",
-                        "name": "people_id",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Start time in RFC3339 format",
-                        "name": "start_time",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "End time in RFC3339 format",
-                        "name": "end_time",
-                        "in": "query",
-                        "required": true
+                        "description": "People id and time range",
+                        "name": "task",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.peopleTimeRange"
+                        }
                     }
                 ],
                 "responses": {
@@ -815,6 +803,20 @@
                 },
                 "taskID": {
                     "type": "integer"
+                }
+            }
+        },
+        "handler.peopleTimeRange": {
+            "type": "object",
+            "properties": {
+                "end_time": {
+                    "type": "string"
+                },
+                "people_id": {
+                    "type": "integer"
+                },
+                "start_time": {
+                    "type": "string"
                 }
             }
         },
